# learning-axum

./: Cargo.toml  README.md
.cargo/: config.toml
sql/_dev_utils/: mod.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/ctx/: error.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
tests/: quick_dev.rs
