[package]
name = "learning-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
lazy-regex = "3.1.0"
async-trait = "0.1"
strum_macros = "0.25"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
env_filter = "0.1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }

[dev-dependencies]
anyhow = "1.0.80"
httpc-test = "0.1.9"